--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,3 +4,19 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+.head {
+    text-align: center;
+}
+#canvas-game{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -60%);
+}
+.ctrlBtn {
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
